# mlog_parse

./: Cargo.toml  LICENSE  README.md
codegen/: codegen.py  desc.txt
codegen/data/: mimex-icons.txt  mimex-items.txt
mlog_files/: base_builder.mlog  mandelbrot.mlog  odd_supply.mlog  unit_transport.mlog
mlog_files/golem/: base_builder_wproc.mlog  power_plant.mlog
mlog_files/samples/: is_v7a.mlog  is_v7b.mlog
src/: lib.rs  test.rs
src/item_defs/: mindustry_icon.rs  mindustry_items.rs  mod.rs
src/parser/: args.rs  errs.rs  instr_gen.rs  instructions.rs  lexer.rs  mod.rs  statement_def.rs  statement_gen.rs  statement_gen_expmt.rs  statements.rs
src/parser/args/: colour.rs  mod.rs  named_colours.rs  num_parse.rs  test.rs  writable_atvals.rs
src/tests/: mod.rs  parser.rs  real_code.rs  recursive_translation.rs
