[package]
name = "mlog_parse"
description = "A parser for mindustry logic"
repository = "https://github.com/Mnem42/mlog_parse"
keywords = ["mindustry", "logic", "parser"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "1.4.1"