[package]
name = "mlog_parse"
description = "A parser for mindustry logic"
repository = "https://github.com/Mnem42/mlog_parse"
keywords = ["mindustry", "logic", "parser"]
license = "MIT"
readme = "README.md"
version = "0.1.1"
edition = "2024"

[features]
default = ["rgb_crate"]
serde = ["dep:serde", "rgb/serde"]
rgb_crate = ["dep:rgb"]

[dependencies]
regex = "1.12.2"

thiserror = "2.0.17"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[dependencies.rgb]
version = "0.8.52"
optional = true

[dependencies.strum]
version = "0.27.2"
features = ["derive"]


[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.1"
